Clean up chapter 15.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@69321 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -10233,7 +10233,7 @@ Sarah Kathleen Barbarow,
 Andrea Parker,
 Radaphat Chongthammakun,
 Megan Hixon,
-Kirb Urner,
+Kirby Urner,
 Sarah Kathleen Barbrow,
 Katie Kujala,
 Noah Botimer,
